--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -19,5 +18,7 @@
     "nodejs": "^0.0.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
